# Microc

./: Cargo.toml  Makefile  README.md  grammar.txt  tinyNew.C  token_definitions.txt
inputs/stage1/: fibonacci.micro  loop.micro  nested.micro  sqrt.micro
inputs/stage2/: test10.micro  test12.micro  test17.micro  test20.micro  test21.micro  test3.micro  test8.micro  test9.micro
inputs/stage3/: test14.micro  test20.micro  test21.micro  test7.micro  test8.micro  test9.micro
inputs/stage4/: test_combination.micro
inputs/stage5/: test_if.micro
inputs/stage6/: fma.micro
inputs/stage7/: factorial2.micro  fibonacci2.micro  step4_testcase.input  step4_testcase.micro  step4_testcase2.micro  test_adv.micro  test_for.micro
outputs/stage1/: fibonacci.out  loop.out  nested.out  sqrt.out
outputs/stage4/: test_mult.out
outputs/stage5/: step4_testcase.out  step4_testcase2.out  test_adv.out  test_for.out  test_if.out
outputs/stage6/: factorial2.out  factorial2.tinyout  fibonacci2.out  fibonacci2.tinyout  fma.tinyout
outputs/stage7/: factorial2.out  fibonacci2.out  fma.out  step4_testcase.out  step4_testcase2.out  step4_testcase3.out  test_573.out  test_adv.out  test_dowhile.out  test_expr.out  test_if.out
src/: main.rs  microc.lalrpop  symbol_table.rs  token.rs
src/asm/: mod.rs  tiny.rs
src/ast/: ast_node.rs  decl.rs  mod.rs
src/cfg/: basic_block.rs  liveness.rs  mod.rs
src/register_alloc/: mod.rs  types.rs
src/symbol_table/: decl.rs  error.rs  mod.rs  scope.rs  scope_tree.rs  symbol.rs
src/three_addr_code_ir/: mod.rs  three_address_code.rs
(+1 files in other folders)
